cmake_minimum_required(VERSION 3.8)
project(VividImage)

set(CMAKE_CXX_STANDARD 11)

set(BUILD_LIBRARY false)

set(MAIN_FILE main.cpp)
set(HEADER_FILES image.h bitarray.h node.h tree.h)
set(CPP_FILES image.cpp bitarray.cpp tree.cpp)

if (BUILD_LIBRARY)
	FILE(REMOVE_RECURSE bin/library/)
	add_library(VividImage STATIC ${CPP_FILES})
	set_target_properties(VividImage PROPERTIES PREFIX "")
	set_target_properties(VividImage PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/library/VividImage/libs/")
	FILE(COPY ${HEADER_FILES} DESTINATION "${PROJECT_SOURCE_DIR}/bin/library/VividImage/include/VividImage/")
	FILE(COPY ${CPP_FILES} DESTINATION "${PROJECT_SOURCE_DIR}/bin/library/VividImage/src/VividImage/")
	FILE(COPY librarydependecies/CMakeLists.txt DESTINATION "${PROJECT_SOURCE_DIR}/bin/library/VividImage/")
else (BUILD_LIBRARY)
	FILE(REMOVE_RECURSE bin/debug/)
	add_executable(VividImage ${MAIN_FILE} ${HEADER_FILES} ${CPP_FILES})
	set_target_properties(VividImage PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/debug/")
	FILE(GLOB RES_FILES res/*)
	FILE(COPY ${RES_FILES} DESTINATION "${PROJECT_SOURCE_DIR}/bin/debug/")
endif (BUILD_LIBRARY)